--- a/applovinonly.json
+++ b/applovinonly.json
@@ -5,7 +5,8 @@
        "Applovin_Banner":"afc106cac6c85186",
        "Applovin_merc":"bca771f0dc0910ee",
        "Applovin_Inter":"335804ed29f022ca",
-       "Applovin_Reward":"d2143f5847ca9741"
+       "Applovin_Reward":"d2143f5847ca9741",
+       "Privacy_Policy":"www.google.com"
     
     }
     
