--- a/applovinonly.json
+++ b/applovinonly.json
@@ -6,7 +6,7 @@
        "Applovin_merc":"bca771f0dc0910ee",
        "Applovin_Inter":"335804ed29f022ca",
        "Applovin_Reward":"d2143f5847ca9741",
-       "Privacy_Policy":"www.google.com"
+       "Privacy_Policy":"https://www.google.com"
     
     }
     
